--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="def_text_grey_303">#303553</color>
     <color name="def_text_grey_6F7">#6F738B</color>
     <color name="def_text_grey_C9C">#C9CDD4</color>
+    <color name="def_diver_grey_F2F">#F2F2F6</color>
     <color name="black_57">#575757</color>
     <color name="black_08">#080F38</color>
     <color name="black_3d">#3d3f46</color>
