--- a/Android/app/src/main/res/layout/app_activity_mine_account.xml
+++ b/Android/app/src/main/res/layout/app_activity_mine_account.xml
@@ -63,7 +63,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/bg_def_button_grey_solid"
-        android:text="@string/app_logout"
+        android:text="@string/app_logout_account"
         android:textColor="@color/def_text_grey_303"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
