--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -56,6 +56,7 @@
     <color name="red_e0">#E02020</color>
     <color name="red_fa">#FA396A</color>
     <color name="red_f7">#F74747</color>
+    <color name="red_f3">#FF3B30</color>
     <color name="pink_b4">#FF8AB4</color>
     <color name="orange_e6">#e69138</color>
 
