--- a/Android/app/src/main/res/layout/app_dialog_call_phone.xml
+++ b/Android/app/src/main/res/layout/app_dialog_call_phone.xml
@@ -1,30 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:paddingBottom="20dp"
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCallPhone"
         android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCallPhone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white_f8"
-        android:textColor="@color/blue_9F"
-        android:gravity="center"
-        android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvCallTitle"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:gravity="center"
+                android:textColor="#79797e"
+                android:textSize="13sp"
+                android:visibility="gone"
+                tools:text="联系客服" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:id="@+id/divider"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:dividerColor="@color/def_diver_grey_F2F" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvCallPhone"
+                android:layout_width="match_parent"
+                android:layout_height="61dp"
+                android:gravity="center"
+                android:textColor="@color/blue_9F"
+                android:textSize="20sp"
+                tools:text="400-632-6626" />
+
+        </LinearLayout>
+
 
     </androidx.cardview.widget.CardView>
 
@@ -32,25 +59,25 @@
         android:id="@+id/cvCancel"
         android:layout_width="match_parent"
         android:layout_height="61dp"
-        android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cvCallPhone" >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cvCallPhone">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCancel"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/blue_9F"
-        android:textSize="20dp"
-        android:text="@string/app_about_phone_cancel" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvCancel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:gravity="center"
+            android:text="@string/app_about_phone_cancel"
+            android:textColor="@color/blue_9F"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </androidx.cardview.widget.CardView>
 
