--- a/Android/app/src/main/res/values/themes.xml
+++ b/Android/app/src/main/res/values/themes.xml
@@ -57,6 +57,11 @@
         <item name="cornerSize">16dp</item>
     </style>
 
+    <style name="app_corner12Style">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">12dp</item>
+    </style>
+
     <style name="app_TabLayoutTextSelected">
         <item name="android:textSize">17sp</item>
         <item name="android:textStyle">bold</item>
@@ -67,6 +72,19 @@
         <item name="android:textSize">15sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/def_text_grey_303</item>
+    </style>
+
+    <style name="app_feedback_textview">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:textColor">@color/def_text_grey_303</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">12dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:background">@drawable/app_bg_button_e9e_solid_r8</item>
     </style>
 
 </resources>
