--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_room_list_empty_view.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_room_list_empty_view.xml
@@ -2,55 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/bg_app_def_white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/pure1v1_room_list_empty_bg"
-        />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="90dp"
-        android:scaleType="fitStart"
+        android:id="@+id/ivBackground"
+        android:layout_width="272dp"
+        android:layout_height="170dp"
+        app:layout_constraintVertical_bias="0.35"
         android:src="@drawable/pure1v1_room_list_empty_girl"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
-
-    <View
-        android:id="@+id/vContent"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:background="@drawable/pure1v1_bottom_dialog_card"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="106dp"
-        android:layout_height="100dp"
-        android:src="@drawable/pure1v1_calling_corner_bg"
-        app:layout_constraintStart_toStartOf="@+id/vContent"
-        app:layout_constraintTop_toTopOf="@+id/vContent"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="48dp"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:text="@string/pure1v1_room_list_empty_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/vContent"
+        app:layout_constraintTop_toBottomOf="@+id/ivBackground"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -58,7 +36,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textSize="14sp"
         android:text="@string/pure1v1_room_list_empty_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
