--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_agora_room_list_layout.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_agora_room_list_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/voice_bg_app_def_white">
+    android:background="@mipmap/bg_app_def_white">
 
     <io.agora.scene.voice.spatial.ui.widget.titlebar.RoomTitleBar
         android:id="@+id/title_bar"
@@ -79,8 +79,8 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btnCreateRoom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
         android:backgroundTint="@android:color/transparent"
