--- a/Android/app/src/main/res/values/themes.xml
+++ b/Android/app/src/main/res/values/themes.xml
@@ -87,4 +87,31 @@
         <item name="android:background">@drawable/app_bg_button_e9e_solid_r8</item>
     </style>
 
+    <style name="app_find_title_textview">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/def_text_grey_303</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="app_find_content_textview">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:lineSpacingExtra">3dp</item>
+        <item name="android:textColor">@color/def_text_grey_303</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="app_find_doc_textview">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:drawableEnd">@drawable/app_icon_find_doc</item>
+        <item name="android:textColor">@color/blue_2e</item>
+        <item name="android:text">@string/app_find_integrated_document</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
 </resources>
