--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_create_room.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_create_room.xml
@@ -103,7 +103,7 @@
         android:text="@string/ktv_room_pwd"
         />
 
-    <CheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/cbPassword"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
@@ -111,6 +111,7 @@
         app:layout_constraintStart_toEndOf="@+id/tvPassword"
         app:layout_constraintTop_toTopOf="@+id/tvPassword"
         app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
+        android:gravity="center"
         android:button="@drawable/cb_def_selector"
         android:background="@android:color/transparent"
         />
@@ -126,6 +127,7 @@
         android:text="@string/ktv_please_input_4_pwd"
         android:textSize="12dp"
         android:textColor="#FA396A"
+        android:visibility="gone"
         />
 
     <androidx.appcompat.widget.AppCompatEditText
