--- a/Android/app/src/main/res/layout/app_fragment_home_index.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_index.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:tabGravity="center"
+        app:tabGravity="start"
         app:tabIndicatorHeight="0dp"
         app:tabMode="scrollable"
         app:layout_constraintStart_toStartOf="parent"
